# esatan-csv-parsing

./: .gitignore  .gitlab-ci.yml  README.md  add-files-to-spec  example.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: GUI.py  IOutils.py  config.toml  config_model.py  eltypes.py  main.py  parse.py  paths.py  plot.py
