[tool.poetry]
name = "utilities"
version = "0.1.0"
description = "Data-parsing utilities for the Thermal subsystem"
authors = ["Orestis Ousoultzoglou <orousoultzoglou@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
