[tool.poetry]
name = "utilities"
version = "0.1.0"
description = "Data-parsing utilities for the Thermal subsystem"
authors = ["Orestis Ousoultzoglou <orousoultzoglou@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.0"

seaborn = "^0.13.0"
matplotlib = "^3.7.2"
pydantic = "^2.3.0"
pyinstaller = { version = "^6.1.0", optional = true }
yapf = { version = "^0.40.2", optional = true }
toml = { version = "^0.10.2", optional = true }
isort = { version = "^5.12.0", optional = true }

[tool.poetry.extras]
build = ["pyinstaller"]
format = ["yapf", "toml", "isort"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
